# laguerre_polynomials

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  ExtendedFMA.h  L18_test  L18_test.cpp  Laguerre_Numerical.h  Makefile  Polynomial.h  README.md  SPA15.ipynb  fpml.h  generate_test.cpp  main.cpp  operations_test.cpp  poly_test.cpp  roots.poly.h  test_fpml.cpp  test_roots_poly.cpp  test_roots_poly.h
SPA15/: README.md  SPA15.ipynb
docs/html/: BaseSolver_8h.html  BaseSolver_8h_source.html  ExtendedFunctions_8h.html  ExtendedFunctions_8h_source.html  L13__test_8cpp.html  L18__or_8h.html  L18__or_8h_source.html  L18__test_8cpp.html  Laguerre13m_8h.html  Laguerre13m_8h_source.html  Laguerre15m_8h.html  Laguerre15m_8h_source.html  Laguerre15m__or_8h.html  Laguerre15m__or_8h_source.html  Laguerre18m_8h.html  Laguerre18m_8h_source.html  Laguerre_8h.html  Laguerre_8h_source.html  PolynomialGenerator_8h.html  PolynomialGenerator_8h_source.html  Polynomial_8h.html  Polynomial_8h_source.html  README_8md.html  annotated.html  classBaseSolver-members.html  classBaseSolver.html  classLaguerre_1_1Generator-members.html  classLaguerre_1_1Generator.html  classLaguerre_1_1ModifiedLaguerre13-members.html  classLaguerre_1_1ModifiedLaguerre13.html  classLaguerre_1_1ModifiedLaguerre18-members.html  classLaguerre_1_1ModifiedLaguerre18.html  classLaguerre_1_1Original-members.html  (+143 more)
headers/: BaseSolver.h  ExtendedFMA.h  ExtendedFunctions.h  FastFourier.h  Laguerre.h  Laguerre13.h  Laguerre13m.h  Laguerre18m.h  Polynomial.h  PolynomialGenerator.h  framework.h  framework_example.cpp
(+181 files in other folders)
